--- a/trunk/README
+++ b/trunk/README
@@ -24,19 +24,17 @@ up-to-date, extensible, powerful, yet free editor which is available
 for any operating system where ANSYS is running.
 
 The current stable version (14.5.1) of ANSYS-Mode is available at the
-[http://code.google.com/p/ansys-mode Google Code site] (hint: paste
-e. g. "wget
-http://ansys-mode.googlecode.com/files/ansys-mode-14.5.1.tgz"
-to get the sources).  Besides the code and Emacs you will find also in
+[http://code.google.com/p/ansys-mode Google Code site] (The command line way, e. g.: "wget
+http://ansys-mode.googlecode.com/files/ansys-mode-14.5.1.tgz").  Besides the code and Emacs you will find also in
 the download section two PDF tutorials.  For an immediate access have
 a look at the
-[http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/ansys-mode_tutorial.html introductory online version],
+[http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/ansys-mode_tutorial.html introductory on-line version],
 here you are able to see the images in a higher resolution as in the
 PDF version.   And in the
-[http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/APDL_tutorial.html  in-depth online tutorial] there is the source code highlighting better
+[http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/APDL_tutorial.html  in-depth on-line tutorial] there is the source code highlighting better
 preserved as in its PDF version.
 
-Please report bugs and inconsistencies also in the documention! Write
+Please report bugs and inconsistencies also in the documentation! Write
 an email to the [mailto:dieter@duenenhof-wilhelm maintainer] or use
 Google Code's [http://code.google.com/p/ansys-mode/issues/list issues list].
 
